# eccc-msc-amqp-alerts

./: LICENSE  README.md  T_WHCN13_C_CWTO_202206020006_1488333413.cap  asyncio_testing.py  config.ini  listen.py  mypy.ini  pyproject.toml  wmo_header.py
.github/workflows/: python-app.yml
eccc_msc_amqp_alerts/: __init__.py  __main__.py  cap.py  config.py  listen.py  message_consumer.py  types.py  webserver.py  wmo_header.py
eccc_msc_amqp_alerts/static/: style.css
eccc_msc_amqp_alerts/templates/: index.html
