[tool.poetry]
name = "eccc-msc-amqp-alerts"
version = "0.1.0"
description = "Subscribe and listen to Environment and Climate Change Canada's (ECCC) Meteorological Service of Canada (MSC) Datamart AMQP server for timely notification of all and any meteorological alerts and bulletins."
authors = ["Justin Bull <me@justinbull.ca>"]
license = "GPL-3.0-or-later"  # required due to GTStoWIS2
repository = "https://github.com/f3ndot/eccc-msc-amqp-alerts"

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.2.0"
requests = "^2.26.0"
gtstowis2 = {git = "https://github.com/wmo-im/GTStoWIS2.git", rev = "main"}

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.960"
flake8-bugbear = "^22.4.25"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
